@@ -1,5 +1,7 @@
 package com.cab.effektCards.segen;
 
+import java.util.stream.Collectors;
+
 import com.cab.card.Art;
 import com.cab.card.Card;
 import com.cab.cardGame.CardGame;
@@ -24,9 +26,9 @@ public class Aufrufung extends EffektCardState {
 	public void setUpOptionsToSelect() {
         super.setUpOptionsToSelect();
 		cardGame.optionsCardsToSelect.addAll(
-			cardGame.player.stapel.stream()
-			.filter(card -> card.art == Art.Fabelwesen)
-			.toList()
+    		cardGame.player.stapel.stream()
+        	.filter(card -> card.art == Art.Fabelwesen)
+        	.collect(Collectors.toList())
 		);
     }
 }
